src/css/dashboard.css
/*
* Dashboard view Style
*/
@media (width: 1024px) {

}
.title {
    font-size: 3vh;
}
.progressarien {
    font-size: 2vh
}
.second_title {
    font-size: 2.5vh;
}

/*
* head dashboard
*/
.headdashboard{
  height: 13.1vh;
  border-bottom: 0.35vh solid lightgrey;
  display: flex;
  font-size: 3vh;
}


/*
* Shared Styles
*/
.bgcurrentproject, .bgchecklist, .bgcontact {
    border: 0.1vh solid lightgrey;
    padding-left: 1vh;
    padding-top: 1vh;
    padding-right: 1vw;
}

/*
* Current Project Styles
*/
.bgcurrentproject {
    position: relative;
    background: linear-gradient(to right, #eee, #ddd);
}
.bgcurrentproject .height50 {
    height: 4vh;
}
.fright img {
    height: 2.4vh;
}
.bgcurrentproject .activeoverflow {
    overflow-y: auto;
    height: 25.3vh;
    width: 98%;
    font-size: 2.25vh;
}
.bgcurrentproject .activeoverflow::-webkit-scrollbar {
    display: none;
}
tr {
    height: 2.1vh;
}
tr.stripped {
    background: linear-gradient(to right, grey, darkgrey);
}
td input[type="checkbox"] {
    border-radius: none;
    border-color: black;
    color: green;
    background-color: rgba(0, 0, 0, 0);
    width: 2em;
    height: 2em;
}
td img {
    height: 3vh;
    width: auto;
}
.pbottom {
    width: 90%;
    font-size: 2vh;
    padding-bottom: 2vh;
}
.pbottom .fleft {
    margin-top: 0.5em;
    font-size: 1.25em;
}
input.view_details {
    background-color: none;
    transform: translateY(5%);
    padding: 1vh 1.5vh;
    box-shadow: none;
    border-top-left-radius: 1.5vh 50%;
    border-top-right-radius: 1.5vh 50%;
    border-bottom-left-radius: 1.5vh 50%;
    border-bottom-right-radius: 1.5vh 50%;
}
/*
* Checklist Styles
*/
.bgchecklist {
    background: #eee;
}
.bgchecklist .height50 {
    height: 4vh;
}
.bgcurrentproject--accordion {
    height: 30vh;
    overflow-y: auto;
    border-top: 0.2vh solid grey;
}
.bgcurrentproject--accordion::-webkit-scrollbar {
    display: none;
}
.bgcurrentproject--accordion .panel-group .panel.panel-default {
    border-radius: 0;
    margin: 0;
    background: transparent;
    border-bottom: 0.2vh solid grey;
    border-right: 0.2vh solid grey;
    border-left: 0.2vh solid grey;
}
.bgchecklist .panel-title {
    width: 98%;
    padding-top: 0.5vh;
    height: 2.5vh;
    font-size: 1.5vh;
}
.bgchecklist .panel-title a:before {
    background-image: url("/img/ARROW-DOWN-ICON.png");
    background-size: 2vh 1vh;
    background-repeat: no-repeat;
    display: inline-block;
    width: 2vh;
    height: 1vh;
    content: "";
    padding-right: 2vw;
}
.bgchecklist .panel-title a:after {
    background-image: url("/img/CHECKED-ICON.png");
    background-size: 3.5vh 3.5vh;
    background-repeat: no-repeat;
    display: inline-block;
    width: 3.5vh;
    height: 3.5vh;
    content: "";
    transform: translateY(-26.5%);
    float: right;
}
.bgchecklist .panel-title a img {
    width: 10%;
}
.bgchecklist .panel-body {
    height: 10vh;
}

/*
* Contact Styles
*/
.bgcontact {
    background: #ddd;
}
.contact-list tr {
    border: 1vh solid #ddd;
    font-size: 1.5vh;
}
.contact-list img {
    width: 80%;
    height: auto;
}
.contact-list-name {
    width: 35%;
}
.contact .phone {
    width: 25%;
}
.contact .email {
    width: 13%;
}
.contact-list-mail {
    width: 15%;
}

/*
* Last visits Styles
*/
.width25.fleft.bgcontact {
    background: linear-gradient(to right, lightgrey, #eee);
}
.width25.fleft.bgcontact .activeoverflow.height250 {
    margin-top: 1vh;
    height: 33vh;
}
.bgcontact .second_title {
    width: 95%;
    position: relative;
}
.bgcontact .second_title span, .bgcontact .second_title img {
    display: inline;
}
.bgcontact .second_title img {
    float: right;
}
.last-visits-list .last-visit-details {
    border: 0.5vh solid rgba(0, 0, 0, 0);
}
.last-visit-details .read-status {
    width: 15%;
}
.last-visit-details .last-visit-description {
    width: 85%;
    padding-left: 1vh;
    font-size: 2vh;
}
.last-visit-details .read-status img {
    width: 90%;
    height: auto;
}
/*
* News Styles
*/
.dashboard-news {
    background: linear-gradient(to bottom, lightskyblue, white, lightgrey);
    position: relative;
    z-index: -1;
    overflow: hidden;
}
.dashboard-news img {
    width: 100%;
    height: 100%;
}

